# Pychora

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  src.html  src.piece_type.html  src.process_database.html
docs/: src.__init__.html  src.bitboard.html  src.clustering.html  src.opening.html
src/: bitboard.py  experiments.py  opening.py  piece_type.py  pychora_db.py  pychora_rec.py
src/chess_opening_recommender/: bitboard.py  clustering.py  experiments.py  main.py  opening.py  process_database.py  purify_database.py  test.py
src/chess_opening_recommender/experiments/: lichess_db_ol10_p10.json  lichess_db_ol10_p12.json  lichess_db_ol10_p14.json  lichess_db_ol10_p16.json  lichess_db_ol10_p18.json  lichess_db_ol10_p2.json  lichess_db_ol10_p20.json  lichess_db_ol10_p4.json  lichess_db_ol10_p6.json  lichess_db_ol10_p8.json  lichess_db_ol3_p10.json  lichess_db_ol3_p12.json  lichess_db_ol3_p14.json  lichess_db_ol3_p16.json  lichess_db_ol3_p18.json  lichess_db_ol3_p20.json  lichess_db_ol3_p4.json  lichess_db_ol3_p6.json  lichess_db_ol3_p8.json  lichess_db_ol4_p10.json  lichess_db_ol4_p12.json  lichess_db_ol4_p14.json  lichess_db_ol4_p16.json  lichess_db_ol4_p18.json  lichess_db_ol4_p20.json  lichess_db_ol4_p4.json  lichess_db_ol4_p6.json  lichess_db_ol4_p8.json  lichess_db_ol5_p10.json  lichess_db_ol5_p12.json  lichess_db_ol5_p14.json  lichess_db_ol5_p16.json  lichess_db_ol5_p18.json  lichess_db_ol5_p2.json  lichess_db_ol5_p20.json  lichess_db_ol5_p4.json  lichess_db_ol5_p6.json  lichess_db_ol5_p8.json  lichess_db_ol6_p10.json  (+39 more)
test/: test.py
(+20 files in other folders)
