[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chess_opening_recommender"
version = "0.0.1"
authors = [
    { name = "Paul Workman", email = "pw466@exeter.ac.uk" }
]
description = "A project to recommend chess openings based on a opening repertoire"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/WorkmanP/chess_opening_recommender"
"Bug Tracker" = "https://github.com/WorkmanP/chess_opening_recommender/issues"